Fix monkey-patch and all the tests